--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/JAV27/gdl-website#readme",
   "dependencies": {
     "@sendgrid/mail": "^7.2.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
