--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "jquery-aniview": "^1.0.2",
     "nodemailer": "^6.4.10"
   },
   "devDependencies": {
